Updates release notes for version 2.0
Change-Id: I9da9501e0bc83bc1944a4cf9c88efe991207bc41
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.0.adoc
@@ -89,10 +89,22 @@ String applicationIdentifiers = ApplicationTypesMatcher.on(engine)
 
 The VIATRA Query engine also supports setting the default search-based and default caching backend instances, allowing further customization of the runtime behavior of the engine. The new feature is available through the previously used `ViatraQueryEngineOptions` class.
 
+=== p2 repository structure update
+
+The removal of various features in this release made us reconsider the contents  of our p2 repository. Previously we used a composite repository with all of our releases, but the features removed from version 2.0 show up in its earlier version that can be confusing. In order to handle this case better (and also for better performance), we have introduced a `/latest` p2 repository, and simplified the categorization instead. 
+
+With regards to these changes, the link:http://eclipse.org/viatra/download.html[download page] was also updated.
+
 == Migrating to VIATRA 2.0
 
 === Dependency updates
-Update minimum version of required dependencies 
+
+VIATRA 2.0 updates the minimum required version of sevaral of its dependencies. This allowed to clean up some code, but might require updating target requirements. The most important updates:
+
+ * Minimum Java version: Java 8 (previously Java 7 was required)
+ * Minimum Eclipse Platform version: 4.5 - Mars (previously version 3.7 - Indigo was used)
+ * Minimum Xtext version: 2.12 (previously verion 2.9 was used)
+
 
 === Code generator updates
 
